# LocalChatApp

./: CMakeLists.txt  README.md
client/: main.cpp
client/clientHelper/: client.h  clientImp.cpp
lib/: socketUtil.h  socketUtilImp.cpp
server/: main.cpp
server/serverHelper/: server.h  serverImp.cpp
